LightSettings     - Selected device now has the icon of the selected device type     - Brought back transition on device selection - Fixed miscIcon not showing up

--- a/electron-vite-project/src/components/DeviceList.css
+++ b/electron-vite-project/src/components/DeviceList.css
@@ -58,7 +58,7 @@ hr {
 }
 
 .miscIcon {
-  background-image: url('../assets/MiscIcon.png');
+  background-image: url('../assets/miscIcon.png');
 }
 
 .number {
