--- a/electron-vite-project/src/components/LightSettings.css
+++ b/electron-vite-project/src/components/LightSettings.css
@@ -114,7 +114,13 @@
 }
 
 .LightSettingsWindowInvisible {
-  display: none;
+  flex-grow: 0;
+  width: 0;
+  opacity: 0;
+  padding: 10px 0 20px 0;
+  pointer-events: none; 
+  overflow: hidden;     
+  margin-left: -20px;
 }
 
 .LightSettingsWindowUpper {
